removed spotify API credentials

--- a/featureMergingR.ipynb
+++ b/featureMergingR.ipynb
@@ -195,8 +195,8 @@
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
     "\n",
-    "client_credentials_manager = SpotifyClientCredentials(client_id='0b8c9b85ab6c41a4ae49a7c766b6f932',\n",
-    "                                                     client_secret='5ce62e388f064b8bbe85dd5774866fcd')\n",
+    "client_credentials_manager = SpotifyClientCredentials(client_id='xxx',\n",
+    "                                                     client_secret='xxx')\n",
     "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)"
    ]
   },
